# affetto

./: .gitignore  LICENSE  README.md  mail.txt  memo.txt  pyproject.toml  test_dir_creation.py
apps/: affetto-nn-ctrl-7090826.lnk  calculate_rmse.py  calculate_score.py  collect_data.py  plot_adaptive_simulation_resullts.py  record_trajectory.py  simulate_adaptive_control.py  test_initializer.py  track_trajectory.py  train_model.py
apps/config/: adaptive_model.toml  affetto.toml  init_left_elbow.toml  model.toml
apps/drawer/: compare_scores_across_dataset.py  compare_scores_across_steps.py  generate_latex_table_across_dataset.py  generate_latex_table_across_regressors.py  plot_timeseries.py
data/: affetto-nn-ctrl-7090826.lnk
data/simulate_adaptive_control/adaptive_simulation/20250628T000042/: adaptive_simulation_results.json
data/simulate_adaptive_control/adaptive_simulation/20250628T001121/: adaptive_simulation_results.csv
data/simulate_adaptive_control/adaptive_simulation/20250628T002002/: adaptive_simulation_results.csv
data/simulate_adaptive_control/adaptive_simulation/20250628T122353/: adaptive_simulation_results.csv
data/simulate_adaptive_control/adaptive_simulation/20250628T124331/: adaptive_simulation_results.csv
data/simulate_adaptive_control/adaptive_simulation/20250628T124717/: adaptive_simulation_results.csv
data/simulate_adaptive_control/adaptive_simulation/20250628T125053/: adaptive_simulation_results.csv
data/simulate_adaptive_control/adaptive_simulation/20250628T133842/: adaptive_simulation_results.csv
data/simulate_adaptive_control/adaptive_simulation/20250628T134932/: adaptive_simulation_results.csv
data/simulate_adaptive_control/adaptive_simulation/20250628T135326/: adaptive_simulation_results.csv
data/simulate_adaptive_control/adaptive_simulation/20250628T143446/: adaptive_simulation_results.csv
data/simulate_adaptive_control/adaptive_simulation/20250628T172936/: adaptive_simulation_results.csv
data/simulate_adaptive_control/adaptive_simulation/20250628T182033/: adaptive_simulation_results.csv
data/simulate_adaptive_control/adaptive_simulation/20250628T193133/: adaptive_simulation_results.csv
data/simulate_adaptive_control/adaptive_simulation/20250628T194107/: adaptive_simulation_results.csv
data/simulate_adaptive_control/adaptive_simulation/20250628T195913/: adaptive_simulation_results.csv
data/trained_model/: data.lnk
data/trained_model/test/20250627T201344/: trained_model.joblib
data/trained_model/test/20250627T232925/: trained_model.joblib
data/trained_model/train_adaptive/20250628T011405/: trained_model.joblib
data/trained_model/train_adaptive/20250628T121045/: trained_model.joblib
data/trained_model/train_adaptive/20250628T123137/: trained_model.joblib
data/trained_model/train_adaptive/20250628T130256/: trained_model.joblib
data/trained_model/train_adaptive/20250628T132820/: trained_model.joblib
data/trained_model/train_adaptive/20250628T140155/: trained_model.joblib
data/trained_model/train_adaptive/20250628T165742/: trained_model.joblib
data/trained_model/train_adaptive/20250628T175931/: trained_model.joblib
data/trained_model/train_adaptive/20250628T180122/: trained_model.joblib
src/affetto_nn_ctrl/: __init__.py  _typing.py  control_utility.py  data_handling.py  event_logging.py  model_utility.py  plot_utility.py  random_utility.py  simulation_utility.py
tests/: __init__.py  conftest.py  test_control_utility.py  test_data_adapter.py  test_data_handling.py  test_model_utility.py  test_random_utility.py
tests/data/: affetto.toml  dummy.toml  joint_linear.csv  joint_mlp_hidden_layer_sizes-100-100_max_iter-500.csv  joint_mlp_hidden_layer_sizes-200_max_iter-500.csv  joint_mlp_max_iter-200.csv  joint_ridge_alpha-0.1.csv  joint_ridge_alpha-1.0.csv  motion_data_000.csv  motion_data_001.csv  motion_data_002.csv  motion_data_003.csv  motion_data_004.csv  motion_data_005.csv  motion_data_006.csv  motion_data_007.csv  motion_data_008.csv  motion_data_009.csv  motion_data_010.csv  rand_traj_step_async_0-1-2.csv  rand_traj_step_async_1-3-5-7.csv  rand_traj_step_async_all.csv  rand_traj_step_sync_0-1-2.csv  rand_traj_step_sync_1-3-5-7.csv  rand_traj_step_sync_all.csv  rand_traj_trapez_async_0-1-2.csv  rand_traj_trapez_async_1-3-5-7.csv  rand_traj_trapez_async_all.csv  rand_traj_trapez_sync_0-1-2.csv  rand_traj_trapez_sync_1-3-5-7.csv  rand_traj_trapez_sync_all.csv  reference_trajectory_000.csv  simple_linear.csv  simple_mlp_max_iter-200.csv  simple_mlp_max_iter-500.csv  simple_mlp_max_iter-800.csv  simple_ridge_alpha-0.1.csv  simple_ridge_alpha-1.0.csv  test_spline_interp_motion_data_s_0.000000  test_spline_interp_motion_data_s_276.464312  (+5 more)
tests/data/dummy_datasets/: dummy_data_000.csv
(+21 files in other folders)
